# cribbage_EU_calculator

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
run/: run_cribbage_eu.py
src/: card.py  cardenums.py  cribbage_eu.py  scorecalc.py  stats.py
src/cribbage/: __init__.py  __main__.py  card.py  cardenums.py  cribbage_eu.py  scorecalc.py  stats.py
tests/: test_card.py  test_cardenums.py  test_scorecalc.py
